# Scavenger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BRANCH_557_560_README.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY_557_560.md  IMPLEMENTATION_SUMMARY_561_562.md  IMPLEMENTATION_SUMMARY_646_649.md  IMPLEMENTATION_SUMMARY_650_653.md  IMPLEMENTATION_SUMMARY_654_657.md  IMPLEMENTATION_SUMMARY_658_661.md  IMPLEMENTATION_SUMMARY_662_665.md  IMPLEMENTATION_SUMMARY_666_669.md  PR_DESCRIPTION_650_653.md  README.md  SECURITY.md  TESTING_IMPLEMENTATION_SUMMARY.md  commit_push.ipynb  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.observability.yml  task1.md  task4.md
backend/: Cargo.toml  Dockerfile.multistage
backend/src/: main.rs
backend/src/api/: analytics.rs  audit.rs  compliance_api.rs  contracts.rs  export.rs  mod.rs  signing_api.rs  verification.rs  ws.rs
backend/src/cache/: cache.rs  distributed.rs  invalidation.rs  mod.rs  warming.rs
backend/src/compliance/: alerts.rs  audit.rs  checklist.rs  mod.rs  monitor.rs  reporting.rs
backend/src/errors/: codes.rs  conversion.rs  format.rs  mod.rs  serialization.rs  tests.rs  types.rs
backend/src/middleware/: csrf.rs  mod.rs  rate_limit.rs  validation.rs
backend/src/security/: mod.rs  signing.rs
backend/src/services/: analytics.rs  api.rs  audit.rs  contract_upgrades.rs  encryption.rs  encryption_verification.rs  export.rs  geospatial.rs  (+10 more)
stellar-contract/: BENCHMARK_RESULTS.md  Cargo.toml  Dockerfile  FUZZING.md  PROPERTY_TESTING.md
stellar-contract/benches/: contract_benchmarks.rs  performance_benchmarks.rs
stellar-contract/src/: analytics.rs  audit_log.rs  contract_analytics.rs  errors.rs  event_builder.rs  events.rs  explorer.rs  incentive.rs  key_rotation.rs  lib.rs  participant.rs  storage_utils.rs  test_expiration.rs  test_grading.rs  test_transfer_path_validation.rs  type_utils.rs  types.rs  upgrade.rs  validation.rs  verification.rs  waste.rs  zkp.rs
stellar-contract/tests/: batch_operations_test.rs  carbon_marketplace_test.rs  contamination_scoring_test.rs  contract_upgrade_test.rs  framework_test.rs  fuzz_comprehensive.rs  fuzz_contract_operations.rs  fuzz_incentive_creation.rs  fuzz_participant_registration.rs  fuzz_regression.rs  fuzz_state_transitions.rs  fuzz_waste_submission.rs  fuzz_waste_transfer.rs  issue_700_703_test.rs  load_testing.rs  merge_wastes_test.rs  property_tests.rs  rbac_test.rs  reconciliation_test.rs  regression_tests.rs  security_testing.rs  smoke_tests.rs  split_waste_test.rs  storage_optimization.rs  test_helpers.rs  waste_reservation_test.rs
(+436 files in other folders)
