[package]
name = "scavenger-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
handlebars = "4.4"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
tokio-util = "0.7"
bytes = "1.5"
image = "0.24"
pdf = "0.9"
csv = "1.3"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
futures = "0.3"
printpdf = "0.7"
actix-ws = "0.3"
actix-web-actors = "4.2"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "scavenger-backend"
path = "src/main.rs"
