[package]
name = "stellar-scavngr-contract"
version = "0.1.0"
edition = "2021"
authors = ["Scavngr Team"]
description = "Stellar Soroban smart contract for the Scavngr recycling platform"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "contract_benchmarks"
harness = false

[features]
testutils = ["soroban-sdk/testutils"]
